IPP: replace with List/Set/Map.of() when using JDK 9